# symcpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: expression.hpp
test/: test.cpp
